halaman ubah password done

--- a/ubah-password.html
+++ b/ubah-password.html
@@ -71,7 +71,6 @@
 
         <!-- Main content -->
         <!-- Main content -->
-        <!-- Main content -->
         <main
           class="flex-1 overflow-y-auto p-6 space-y-4 relative pb-48"
           id="mainContent"
@@ -82,155 +81,67 @@
           </div>
 
           <!-- Form Profil -->
-          <form class="space-y-6 bg-white p-6 rounded-lg shadow text-center">
-            <!-- Foto Profil -->
-            <div class="relative w-28 h-28 mx-auto">
-              <img
-                src="https://i.pravatar.cc/150?img=12"
-                alt="Foto Profil"
-                class="w-28 h-28 rounded-full object-cover border"
-              />
-              <!-- Tombol ubah foto -->
-              <label
-                for="fotoProfil"
-                class="absolute bottom-0 right-0 bg-blue-600 text-white p-2 rounded-full shadow cursor-pointer hover:bg-blue-700 transition"
-              >
-                <i class="bi bi-camera-fill text-sm"></i>
-                <input type="file" id="fotoProfil" class="hidden" />
-              </label>
-            </div>
+          <form class="space-y-6 bg-white p-6 rounded-lg shadow"> 
 
-            <!-- Nama -->
-            <div class="text-left">
+            <div>
               <label
-                for="nama"
+                for="katasandi-lama"
                 class="block text-sm font-medium text-gray-700 mb-1"
               >
-                Nama Lengkap
-              </label>
-              <input
-                type="text"
-                id="nama"
-                value="Maman RPL"
-                readonly
-                class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700"
-              />
-            </div>
-
-            <!-- Email -->
-            <div class="text-left">
-              <label
-                for="email"
-                class="block text-sm font-medium text-gray-700 mb-1"
-              >
-                Email
-              </label>
-              <input
-                type="email"
-                id="email"
-                value="maman@example.com"
-                readonly
-                class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700"
-              />
-            </div>
-
-            <!-- Jenis Kelamin -->
-            <div class="text-left">
-              <label
-                for="gender"
-                class="block text-sm font-medium text-gray-700 mb-1"
-              >
-                Jenis Kelamin
-              </label>
-              <input
-                type="text"
-                id="gender"
-                value="Laki-laki"
-                readonly
-                class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700"
-              />
-            </div>
-
-            <!-- Wali Kelas -->
-            <div class="text-left">
-              <label
-                for="walikelas"
-                class="block text-sm font-medium text-gray-700 mb-1"
-              >
-                Wali Kelas
-              </label>
-              <input
-                type="text"
-                id="walikelas"
-                value="Bu Siti"
-                readonly
-                class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700"
-              />
-            </div>
-
-            <!-- Kelas & Jurusan (flex) -->
-            <div class="flex gap-4 text-left">
-              <div class="flex-1">
-                <label
-                  for="kelas"
-                  class="block text-sm font-medium text-gray-700 mb-1"
-                >
-                  Kelas
-                </label>
-                <input
-                  type="text"
-                  id="kelas"
-                  value="XII RPL B"
-                  readonly
-                  class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700"
-                />
-              </div>
-              <div class="flex-1">
-                <label
-                  for="jurusan"
-                  class="block text-sm font-medium text-gray-700 mb-1"
-                >
-                  Jurusan
-                </label>
-                <input
-                  type="text"
-                  id="jurusan"
-                  value="Rekayasa Perangkat Lunak"
-                  readonly
-                  class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700"
-                />
-              </div>
-            </div>
-
-            <!-- Password -->
-            <div class="text-left">
-              <label
-                for="password"
-                class="block text-sm font-medium text-gray-700 mb-1"
-              >
-                Password
+                Kata Sandi Lama
               </label>
               <div class="relative">
                 <input
                   type="password"
-                  id="password"
-                  value="********"
-                  readonly
+                  id="katasandi-lama"
+                  placeholder="Masukan Katasandi Lama" 
+                  class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700 pr-10"
+                /> 
+              </div>
+            </div>
+
+            <div>
+              <label
+                for="katasandi-baru"
+                class="block text-sm font-medium text-gray-700 mb-1"
+              >
+                Password Baru
+              </label>
+              <div class="relative">
+                <input
+                  type="password"
+                  id="katasandi-baru"
+                  placeholder="Masukan Kata Sandi Baru" 
+                  class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700 pr-10"
+                /> 
+              </div>
+            </div>
+
+            <div>
+              <label
+                for="konfirm-katasandi"
+                class="block text-sm font-medium text-gray-700 mb-1"
+              >
+                Konfirmasi Password Baru
+              </label>
+              <div class="relative">
+                <input
+                  type="password"
+                  id="konfirm-katasandi"
+                  placeholder="Konfirmasi Kata Sandi Baru" 
                   class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700 pr-10"
                 />
                 <a
                   href="ubah-password.html"
                   class="absolute inset-y-0 right-0 flex items-center pr-3 text-blue-600 hover:text-blue-800"
                 >
-                  <i class="bi bi-pencil-square text-lg"></i>
                 </a>
               </div>
             </div>
 
-            <p class="text-gray-500 text-sm text-center">
-              Perubahan mengenai data diatas yang tidak bisa diubah silahkan
-              hubungi wali kelas
-            </p>
+            <a href="#" class="text-gray-500 text-sm text-end">
+              Lupa Katasandi? 
+            </a>
 
             <!-- Tombol -->
             <div class="flex justify-end">
