button ubah katasandi

--- a/laporkan-siswa.html
+++ b/laporkan-siswa.html
@@ -20,7 +20,7 @@
         <span class="font-bold text-lg">Tertib SMK</span>
 
         <div class="hidden md:block w-1/2">
-          <span class="font-bold text-lg">Peringkat </span>
+          <span class="font-bold text-lg">Saya </span>
         </div>
 
         <!-- Profile -->
