--- a/saya.html
+++ b/saya.html
@@ -20,7 +20,7 @@
         <span class="font-bold text-lg">Tertib SMK</span>
 
         <div class="hidden md:block w-1/2">
-          <span class="font-bold text-lg">Profil </span>
+          <span class="font-bold text-lg">Saya </span>
         </div>
 
         <!-- Profile -->
@@ -146,7 +146,7 @@
 
             <!-- Tukar Poin -->
             <a
-              href="#"
+              href="tukar-poin.html"
               class="flex items-center justify-between bg-white p-4 rounded-lg shadow hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-3">
