--- a/ubah-password.html
+++ b/ubah-password.html
@@ -81,8 +81,7 @@
           </div>
 
           <!-- Form Profil -->
-          <form class="space-y-6 bg-white p-6 rounded-lg shadow"> 
-
+          <form class="space-y-6 bg-white p-6 rounded-lg shadow">
             <div>
               <label
                 for="katasandi-lama"
@@ -94,9 +93,9 @@
                 <input
                   type="password"
                   id="katasandi-lama"
-                  placeholder="Masukan Katasandi Lama" 
+                  placeholder="Masukan Katasandi Lama"
                   class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700 pr-10"
-                /> 
+                />
               </div>
             </div>
 
@@ -111,9 +110,9 @@
                 <input
                   type="password"
                   id="katasandi-baru"
-                  placeholder="Masukan Kata Sandi Baru" 
+                  placeholder="Masukan Kata Sandi Baru"
                   class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700 pr-10"
-                /> 
+                />
               </div>
             </div>
 
@@ -128,7 +127,7 @@
                 <input
                   type="password"
                   id="konfirm-katasandi"
-                  placeholder="Konfirmasi Kata Sandi Baru" 
+                  placeholder="Konfirmasi Kata Sandi Baru"
                   class="w-full border rounded-lg p-2 bg-gray-100 text-gray-700 pr-10"
                 />
                 <a
@@ -138,18 +137,25 @@
                 </a>
               </div>
             </div>
-
-            <a href="#" class="text-gray-500 text-sm text-end">
-              Lupa Katasandi? 
-            </a>
+            <div class="">
+              <a href="#" class="text-blue-700 text-sm hover">
+                Lupa Katasandi?
+              </a>
+            </div>
 
             <!-- Tombol -->
-            <div class="flex justify-end">
+            <div class="flex justify-between">
               <a
                 href="saya.html"
                 class="bg-gray-400 text-white px-4 py-2 rounded-lg hover:bg-gray-700 transition text-sm"
               >
                 Kembali
+              </a>
+              <a
+                href="saya.html"
+                class="bg-sky-400 text-white px-4 py-2 rounded-lg hover:bg-sky-700 transition text-sm"
+              >
+                Ubah
               </a>
             </div>
           </form>
