--- a/pengaturan.html
+++ b/pengaturan.html
@@ -20,7 +20,7 @@
         <span class="font-bold text-lg">Tertib SMK</span>
 
         <div class="hidden md:block w-1/2">
-          <span class="font-bold text-lg">Peringkat </span>
+          <span class="font-bold text-lg">Saya</span>
         </div>
 
         <!-- Profile -->
@@ -69,9 +69,7 @@
           </nav>
         </aside>
 
-        <!-- Main content -->
-        <!-- Main content -->
-        <!-- Main content -->
+        <!-- Main content --> 
         <main
           class="flex-1 overflow-y-auto p-6 space-y-4 relative pb-48"
           id="mainContent"
